; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_disk_conditioner.c_disk_conditioner_restore_mount_fields.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_disk_conditioner.c_disk_conditioner_restore_mount_fields.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32, i32 }
%struct.saved_mount_fields = type { i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, %struct.saved_mount_fields*)* @disk_conditioner_restore_mount_fields to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @disk_conditioner_restore_mount_fields(%struct.TYPE_3__* %0, %struct.saved_mount_fields* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.saved_mount_fields*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store %struct.saved_mount_fields* %1, %struct.saved_mount_fields** %4, align 8
  %5 = load %struct.saved_mount_fields*, %struct.saved_mount_fields** %4, align 8
  %6 = getelementptr inbounds %struct.saved_mount_fields, %struct.saved_mount_fields* %5, i32 0, i32 5
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 5
  store i32 %7, i32* %9, align 4
  %10 = load %struct.saved_mount_fields*, %struct.saved_mount_fields** %4, align 8
  %11 = getelementptr inbounds %struct.saved_mount_fields, %struct.saved_mount_fields* %10, i32 0, i32 4
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 4
  store i32 %12, i32* %14, align 4
  %15 = load %struct.saved_mount_fields*, %struct.saved_mount_fields** %4, align 8
  %16 = getelementptr inbounds %struct.saved_mount_fields, %struct.saved_mount_fields* %15, i32 0, i32 3
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 3
  store i32 %17, i32* %19, align 4
  %20 = load %struct.saved_mount_fields*, %struct.saved_mount_fields** %4, align 8
  %21 = getelementptr inbounds %struct.saved_mount_fields, %struct.saved_mount_fields* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 2
  store i32 %22, i32* %24, align 4
  %25 = load %struct.saved_mount_fields*, %struct.saved_mount_fields** %4, align 8
  %26 = getelementptr inbounds %struct.saved_mount_fields, %struct.saved_mount_fields* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 1
  store i32 %27, i32* %29, align 4
  %30 = load %struct.saved_mount_fields*, %struct.saved_mount_fields** %4, align 8
  %31 = getelementptr inbounds %struct.saved_mount_fields, %struct.saved_mount_fields* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  store i32 %32, i32* %34, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
